--- a/site/config.toml
+++ b/site/config.toml
@@ -28,8 +28,8 @@ paginate = 10
 		# Use Markdown to format the string. This works nearly all over the theme
 		bio = "**I'm Bruno**, a super simple dude <br> <br> crafted by [HTML5 UP](//html5up.net)."
 		# The icons will be shown if you enter your username
-		twitter = "spf13"
-		github = "spf13"
+		twitter = "productteams"
+		github = "productteams"
 		dribbble = ""
 		facebook = ""
 		googleplus = ""
