--- a/site/config.toml
+++ b/site/config.toml
@@ -26,7 +26,7 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**I'm Bruno**, a super simple dude <br> <br> crafted by [HTML5 UP](//html5up.net)."
+		bio = "**I'm Bruno**, product manager,maker,  <br> <br> crafted by [productTeams](//productteams.com)."
 		# The icons will be shown if you enter your username
 		twitter = "productteams"
 		github = "productteams"
