--- a/site/config.toml
+++ b/site/config.toml
@@ -26,7 +26,7 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**I'm Bruno**, product manager,maker,  <br> <br> crafted by [productTeams](//productteams.com)."
+		bio = "**I'm Bruno**, product manager,maker,<br>scrum-master to [productTeams](//productteams.com)."<br>
 		# The icons will be shown if you enter your username
 		twitter = "productteams"
 		github = "productteams"
@@ -45,7 +45,7 @@ paginate = 10
 
 	[params.about]
 		hide  = false
-		title = "Product people love"
+		title = "Helping Build Products Customers Love"
 		content = "Agile development ."
 
 
@@ -98,7 +98,7 @@ paginate = 10
 	[params.contact]
 		hide  = false
 		title = "Get In Touch"
-		content = "Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor."
+		content = "happy to help where I can. "
 
 		address = [
 			"805-821-1151",
